added about page and styled it.

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/about.html
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/about.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="about-us">
+        <p class="p1">
+          If you’re thinking of cruising, there’s a very good chance you’re
+          considering a Cabot Cruises. Growing since our founding in 1972, Cabot
+          Cruise Line — “The World’s Most Popular Cruise Line®” — now carries
+          millions of passengers every year. Our newest ship is Cabot Panorama™,
+          which debuted in December 2019. This year, definitely look for the
+          transformed Cabot Radiance and the game-changing new Mardi Gras™.
+          Cabot Cruise Line is proud to be part of a family of companies owned
+          by Cabot Corporation, which includes Princess Cruises.
+        </p>
+        <p class="p2">
+          In a nutshell… we’re all about fun vacations at sea and ashore! A
+          Cabot cruise features day and nighttime entertainment like stage
+          shows, musical performances, deck parties, casinos and more. (Like
+          what? Like waterslides!) We invite our guests to come as they are, and
+          we make everyone feel right at home with comfy staterooms, attentive
+          service, casual and elegant dining, plus a variety of bars and
+          gathering places indoors and out. Guests enjoy this unique experience
+          against the backdrop of some of the world’s most beautiful seaports.
+        </p>
+        <p class="p3">
+          Our 25 ships operate 2- to 16-day voyages, departing from every coast
+          in the U.S., as well as Canada, Puerto Rico and Barbados. While we’re
+          best known for Caribbean cruises, we sail to other exotic and amazing
+          destinations like Mexico, Alaska, The Bahamas, Europe and Hawaii.
+          Additionally, Cabot Cruise Line Australia has two ships, and offers
+          cruises from Sydney, Melbourne and Brisbane to New Zealand and the
+          Pacific Islands. Cabot Cruise Line proudly supports important causes
+          like St. Jude Children’s Research Hospital.
+        </p>
+      </div>
+    </main>
+  </body>
 </html>
